# oci_agents_workshop

./: .env-sample  .gitignore  AGENTS.md  APPLICATION_LIBRARIES.md  CHANGELOG.md  LEARNING_PATH.md  LICENSE  README.md  agent01.py  embedding01.py  example_chat_oci.py  oci_models.py  pyproject.toml  pytest.ini  utils.py
apps/custom_rag_web/: .env.local.example  README.md  package-lock.json  package.json
apps/custom_rag_web/app/: globals.css  layout.tsx  page.tsx
apps/simple_rag_web/: .env.local.example  README.md  package-lock.json  package.json
apps/simple_rag_web/app/: globals.css  layout.tsx  page.tsx
common/: __init__.py  oci_openai_clients.py  utils.py
custom_rag_agent/: .env-sample  IMPLEMENTATION.md  README.md  __init__.py  api.py  client.py  fake_knowledge_base.py  pdf_loader.py  prompts.py  rag_agent.py  stream_client.py
quickstart/: README.md  __init__.py  agent01.py  embedding01.py  responses01.py  test01.py  vector_store_search01.py
simple_rag_agent/: README.md  __init__.py  api.py  client.py  fake_knowledge_base.py  in_memory_vector_store.py  pdf_loader.py  prompts.py  rag_agent.py
tests/: conftest.py  test_agent01.py  test_custom_fake_knowledge_base.py  test_custom_pdf_loader.py  test_custom_rag_agent.py  test_custom_rag_api.py  test_custom_rag_client.py  test_custom_rag_stream_client.py  test_embedding01.py  test_fake_knowledge_base.py  test_openai_clients.py  test_pdf_loader.py  test_responses01.py  test_simple_rag_agent.py  test_simple_rag_api.py  test_simple_rag_client.py  test_utils.py  test_vector_store_search01.py
